2009-04-09  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#108185 - Notification process doesn't check RAM level

	* configure.ac: Add libosso dep
	* debian/control: Add libosso dep

	* src/hd-incoming-events.c (group_notification_closed,
	  group_activate_notifications, group_window_response,
	  preview_window_response): Check for lowmem condition and do not
	  activate notifications in this case.

	* debian/changelog: Update.

2009-04-07  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.21
	* configure.ac: 0.3.21

2009-04-07  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#108935 - Chat and SMS message notifications are not grouped
	together

	* src/hd-incoming-events.c (NOTIFICATION_GROUP_KEY_GROUPED_CATEGORY,
	  NOTIFICATION_GROUP_KEY_GROUPED, grouped_category, switcher_window,
	  notifications, no_window, grouped, ie, group_free,
	  group_update_window_content, switcher_window_response,
	  get_mapped_category, add_switcher_notification, show_preview_window,
	  cmp_category_func, hd_incoming_events_notified,
	  load_notification_groups): Support groups for multiple categories
	  used for sms and chat messages.

	* src/notification-groups.conf: Add messages group.

	* debian/changelog: Update

2009-04-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-backgrounds.c (gconf_bgimage_notify): Only show update
	  notification when background is changed via Change background
	  dialog.

2009-04-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#109450 - Changed theme is not applied to shortcuts.	

	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_init): Redraw if
	  cached surface change.

	* src/hd-cairo-surface-cache.c (HD_CAIRO_SURFACE_CACHE_GET_PRIVATE,
	  _HDCairoSurfaceCachePrivate, table, theme_monitor, CHANGED,
	  LAST_SIGNAL, signals, hd_cairo_surface_cache_dispose,
	  hd_cairo_surface_cache_class_init, theme_changed,
	  hd_cairo_surface_cache_init, hd_cairo_surface_cache_get_surface):